página sobre criada

--- a/index.html
+++ b/index.html
@@ -13,20 +13,34 @@
 <body>
 
     <header>
-        <div >
-            <img src="/fiis.svg" alt="App Fiis Logo">
-            FiisApp
+        <div>
+            <a href="/">
+                <img src="fiis.svg" alt="App Fiis Logo">
+                FiisApp
+            </a>
         </div>
 
         <ul>
             <li>Página Inicial</li>
-            <li>Sobre</li>
+            <li><a href="/sobre">Sobre</a></li>
         </ul>
 
     </header>
 
 
+    <h1>
+        Site feito para uso próprio e para estudo de React e React Native.
+    </h1>
 
+    <p>O backend lê o ranking de fiis do <a href="https://www.fundsexplorer.com.br/ranking"> FunsExplorer </a> salva em
+        um banco de dados e lista, montando um ranking que soma os menores
+        p/vp (preço por valor patrimonial) e dividend yield médio dos últimos 12 meses
+
+
+
+    </p>
+
+    <a href="https://appfiis.netlify.app/"></a>
 </body>
 
 </html>
