--- a/index.html
+++ b/index.html
@@ -32,13 +32,17 @@
         Site feito para uso próprio e para estudo de React e React Native.
     </h1>
 
-    <p>O backend lê o ranking de fiis do <a href="https://www.fundsexplorer.com.br/ranking"> FunsExplorer </a> salva em
+    <p>
+        O backend lê o ranking de fiis do <a href="https://www.fundsexplorer.com.br/ranking"> FunsExplorer </a> salva em
         um banco de dados e lista, montando um ranking que soma os menores
         p/vp (preço por valor patrimonial) e dividend yield médio dos últimos 12 meses
-
-
-
     </p>
+
+    <h5>A Fazer:</h5>
+    <ul>
+        <li>Filtros</li>
+        <li>Versão mobile React Native</li>
+    </ul>
 
     <a href="https://appfiis.netlify.app/"></a>
 </body>
