--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <ul>
             <li>Página Inicial</li>
-            <li><a href="/sobre">Sobre</a></li>
+            <li><a href="sobre.html">Sobre</a></li>
         </ul>
 
     </header>
@@ -44,7 +44,7 @@
         <li>Versão mobile React Native</li>
     </ul>
 
-    <a href="https://appfiis.netlify.app/"></a>
+    <a href="https://appfiis.netlify.app/">https://appfiis.netlify.app/</a>
 </body>
 
 </html>
