--- a/sobre.html
+++ b/sobre.html
@@ -17,8 +17,8 @@
         </div>
 
         <ul>
-            <li>Página Inicial</li>
-            <li><a href="/sobre">Sobre</a></li>
+            <li><a href="index.html">Página Inicial</a></li>
+            <li><a href="sobre.html">Sobre</a></li>
         </ul>
 
     </header>
