link pra home atualizado

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
 
         <ul>
-            <li>Página Inicial</li>
+            <li><a href="index.html">Página Inicial</a></li>
             <li><a href="sobre.html">Sobre</a></li>
         </ul>
 
