--- a/sobre.html
+++ b/sobre.html
@@ -30,7 +30,7 @@
     <ul>
         <li>Font: ReactJS </li>
         <li>Backend: Java</li>
-        <li>Mobile: React Native (em andamento)</li>>
+        <li>Mobile: React Native (em andamento)</li>
     </ul>
     
 </body>
