--- a/index.html
+++ b/index.html
@@ -8,43 +8,52 @@
     <title>Fiis Mais Baratos da Bolsa</title>
 
     <link rel="stylesheet" href="style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;600;700;800&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
     <header>
-        <div>
-            <a href="/">
-                <img src="fiis.svg" alt="App Fiis Logo">
-                FiisApp
-            </a>
+        <div class="container" style="display: flex; justify-content: space-between;">
+            <div class="logoDiv">
+                <a href="/" style="display: flex; align-items: center;">
+                    <img src="fiis.svg" alt="App Fiis Logo">
+                    <span>FiisApp</span>
+                </a>
+            </div>
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,300;0,400;0,500;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
+            <ul>
+                <li><a href="index.html">Página Inicial</a></li>
+                <li><a href="sobre.html">Sobre</a></li>
+            </ul>
         </div>
-
-        <ul>
-            <li><a href="index.html">Página Inicial</a></li>
-            <li><a href="sobre.html">Sobre</a></li>
-        </ul>
-
     </header>
 
+    <div class="container">
 
-    <h1>
-        Site feito para uso próprio e para estudo de React e React Native.
-    </h1>
+        <h1>
+            Site feito para uso próprio e para estudo de React e React Native.
+        </h1>
 
-    <p>
-        O backend lê o ranking de fiis do <a href="https://www.fundsexplorer.com.br/ranking"> FunsExplorer </a> salva em
-        um banco de dados e lista, montando um ranking que soma os menores
-        p/vp (preço por valor patrimonial) e dividend yield médio dos últimos 12 meses
-    </p>
+        <p>
+            O backend lê o ranking de fiis do <a href="https://www.fundsexplorer.com.br/ranking"> FunsExplorer </a> salva em um banco de dados e lista, montando um ranking que soma os menores p/vp (preço por valor patrimonial) e dividend yield médio dos
+            últimos 12 meses
+        </p>
 
-    <h5>A Fazer:</h5>
-    <ul>
-        <li>Filtros</li>
-        <li>Versão mobile React Native</li>
-    </ul>
+        <h5>A Fazer:</h5>
+        <ul>
+            <li>Filtros</li>
+            <li>Versão mobile React Native</li>
+        </ul>
 
-    <a href="https://appfiis.netlify.app/">https://appfiis.netlify.app/</a>
+        <a href="https://appfiis.netlify.app/">https://appfiis.netlify.app/</a>
+
+    </div>
 </body>
 
 </html>
