header na sobre.html e font alterada.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header>
         <div class="container" style="display: flex; justify-content: space-between;">
             <div class="logoDiv">
-                <a href="/" style="display: flex; align-items: center;">
+                <a href="/">
                     <img src="fiis.svg" alt="App Fiis Logo">
                     <span>FiisApp</span>
                 </a>
