--- a/sobre.html
+++ b/sobre.html
@@ -1,37 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fiis Mais Baratos da Bolsa - Sobre</title>
+    <title>Fiis Mais Baratos da Bolsa</title>
+
+    <link rel="stylesheet" href="style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;600;700;800&display=swap" rel="stylesheet">
 </head>
+
 <body>
 
     <header>
-        <div >
-            <a href="/">
-                <img src="fiis.svg" alt="App Fiis Logo">
-                FiisApp
-            </a>
+        <div class="container" style="display: flex; justify-content: space-between;">
+            <div class="logoDiv">
+                <a href="/">
+                    <img src="fiis.svg" alt="App Fiis Logo">
+                    <span>FiisApp</span>
+                </a>
+            </div>
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,300;0,400;0,500;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
+            <ul>
+                <li><a href="index.html">Página Inicial</a></li>
+                <li><a href="sobre.html">Sobre</a></li>
+            </ul>
         </div>
-
-        <ul>
-            <li><a href="index.html">Página Inicial</a></li>
-            <li><a href="sobre.html">Sobre</a></li>
-        </ul>
-
     </header>
 
-    <h1>
-        Site feito para uso próprio e para estudo.
-    </h1>
+    <div class="container">
 
-    <ul>
-        <li>Font: ReactJS </li>
-        <li>Backend: Java</li>
-        <li>Mobile: React Native (em andamento)</li>
-    </ul>
-    
+        <h1>
+            Site feito para uso próprio e para estudo.
+        </h1>
+
+        <ul>
+            <li>Font: ReactJS </li>
+            <li>Backend: Java</li>
+            <li>Mobile: React Native (em andamento)</li>
+        </ul>
+    </div>
+
 </body>
+
 </html>
